--- a/css/link-btn.css
+++ b/css/link-btn.css
@@ -1,26 +1,64 @@
 .link-button {
-  /* display: flex; */
-  /* flex-direction: column; */
-  position: absolute;
-  left: 2.7%;
-  top: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  gap: 20%;
 
-  /* width: 10%; */
-  /* height: 10%; */
-  font-size: 20.23%;
+  position: absolute;
+  left: 2.5%;
+  top: 5.5%;
+
+  width: clamp(70px, 10%, 180px);
 }
 .link {
-  padding: 3.1% 3.5%;
   cursor: pointer;
   border-radius: 50px;
-  background: linear-gradient(
-    90deg,
-    rgba(31, 175, 56, 1),
-    rgba(96, 214, 105, 1)
-  );
-  color: var(--black-color);
+  border-radius: clamp(30px, 5%, 69px);
 }
-.link.whatsapp {
+
+.site-link {
+  font-size: 20%;
+  font-weight: 400;
+  text-decoration: underline;
+  text-underline-position: unset;
+  color: #000;
+  padding: 0.45em 1em;
+
+  background: #17f642;
+  box-shadow: 0 0 0 0 hsla(43, 100%, 53%, 1);
+  transition: all 0.2s;
+
+  margin-bottom: 12%;
+}
+
+.whatsapp-link {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+
+  font-size: 18%;
+  font-weight: 400;
+  color: #fff;
+
+  transition: all 0.2s;
+
+  background: #814a94;
+  box-shadow: 0 0 0 0 hsla(43, 100%, 53%, 1);
+  padding: 0.38em 0.25em 0.25em 1em;
+}
+.whatsapp-logo {
+  width: 30%;
+}
+
+.site-link:hover,
+.site-link:focus,
+.whatsapp-link:hover,
+.whatsapp-link:focus {
+  scale: 1.02;
+  box-shadow: 0 0 0 1.5px hsla(43, 100%, 53%, 1);
+}
+
+/* .link.whatsapp {
   font-size: 92%;
 
   display: flex;
@@ -29,68 +67,48 @@
   color: var(--white-color);
   background: #814a94;
   backdrop-filter: blur(15.150253295898438px);
-  /* margin-left: 3%; */
+  margin-left: 3%;
   transition: background 0.3s ease, box-shadow 0.3s ease, transform 0.2s ease;
   padding: 2.1% 2% 2.1% 3%;
-  /* width: 28%; */
-}
-.link.whatsapp:hover,
+  width: 28%;
+} */
+/* .link.whatsapp:hover,
 .link.whatsapp:focus {
   background: #25d366;
   color: white;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
   transform: translateY(-2px);
-}
-.link.site {
-  /* margin-right: 3%; */
+} */
+/* .link.site {
+  margin-right: 3%;
   text-decoration: underline;
   transition: background 0.3s ease, transform 0.2s ease;
-}
-.link.site:hover,
-.link.site:focus {
-  background: linear-gradient(360deg, #9241b0 0%, rgba(31, 175, 56, 1) 100%);
-  transform: scale(1.05);
-  box-shadow: 0px 8px 15px rgba(146, 65, 176, 0.5);
-}
-.whatsapp-logo {
+} */
+
+/* .whatsapp-logo {
   width: 30%;
-}
+} */
 @media screen and (max-width: 480px) {
   .link-button {
     width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
     top: 2.43%;
     left: 0;
     justify-content: center;
+  }
+  .site-link {
     font-size: 28%;
+    line-height: 2.3;
+    text-align: end;
+    margin-bottom: 0;
   }
-  .link {
-    padding: 3.4%;
-    width: 30.7%;
 
-    cursor: pointer;
-    border-radius: 500px;
-    background: linear-gradient(
-      90deg,
-      rgba(31, 175, 56, 1),
-      rgba(96, 214, 105, 1)
-    );
-    color: var(--black-color);
+  .whatsapp-link {
+    font-size: 25%;
   }
-  .link.whatsapp {
-    display: flex;
-    align-items: center;
-    padding: 1.5% 1.5% 1.5% 3.4%;
-    color: var(--white-color);
-    background: #814a94;
-    backdrop-filter: blur(15.150253295898438px);
-    /* margin-left: 3%; */
-  }
-  .link.site {
-    /* margin-right: 3%; */
-    text-decoration: underline;
-  }
+
   .whatsapp-logo {
-    width: 28%;
-    /* margin-left: 4%; */
+    /* width: 28%; */
   }
 }
