--- a/css/link-btn.css
+++ b/css/link-btn.css
@@ -92,10 +92,10 @@
   .link-button {
     width: 100%;
     flex-direction: row;
-    justify-content: space-between;
-    top: 2.43%;
-    left: 0;
     justify-content: center;
+    gap: 5%;
+
+    top: 2.43%;
   }
   .site-link {
     font-size: 28%;
@@ -106,9 +106,11 @@
 
   .whatsapp-link {
     font-size: 25%;
+    /* width: 300%; */
   }
 
   .whatsapp-logo {
-    /* width: 28%; */
+    margin-left: 3%;
+    width: 28.9%;
   }
 }
