--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,117 @@ a {
   color: #070145;
 }
 
+/* ------- BUTTONS and LOGO part ------- */
+
+.logo-icon {
+  position: absolute;
+}
+
+.link-button {
+  position: absolute;
+  width: clamp(55px, 10%, 180px);
+  display: flex;
+}
+
+.link {
+  cursor: pointer;
+  border-radius: clamp(30px, 7%, 69px);
+}
+
+.site-link {
+  font-size: 20%;
+  font-weight: 400;
+  text-decoration: underline;
+  text-underline-position: unset;
+  color: #000;
+  padding: 0.45em 1em;
+
+  background: #17f642;
+  box-shadow: 0 0 0 0 hsla(43, 100%, 53%, 1);
+  transition: all 0.2s;
+
+  margin-bottom: 12%;
+}
+
+.whatsapp-link {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  font-size: 18%;
+  font-weight: 400;
+  color: #fff;
+
+  transition: all 0.2s;
+
+  background: #814a94;
+  box-shadow: 0 0 0 0 hsla(43, 100%, 53%, 1);
+
+  padding: 0.38em 0.55em 0.25em 1.2em;
+}
+
+.site-link:hover,
+.site-link:focus,
+.whatsapp-link:hover,
+.whatsapp-link:focus {
+  scale: 1.02;
+  box-shadow: 0 0 0 1.5px hsla(43, 100%, 53%, 1);
+}
+
+@media screen and (max-width: 480px) {
+  .logo-icon {
+    top: 1.7%;
+    left: 49.5%;
+    transform: translate(-50%);
+    width: 48.2%;
+  }
+
+  .link-button {
+    width: 100%;
+    flex-direction: row;
+    justify-content: center;
+    gap: 5%;
+
+    top: 8.5%;
+  }
+  .site-link {
+    font-size: 28%;
+    line-height: 2.3;
+    text-align: end;
+    margin-bottom: 0;
+  }
+
+  .whatsapp-link {
+    font-size: 25%;
+  }
+
+  .whatsapp-logo {
+    margin-left: 3%;
+    width: 28.9%;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .logo-icon {
+    width: 23.07%;
+
+    top: 8.46%;
+    left: 22.5%;
+  }
+
+  .link-button {
+    flex-direction: column;
+    justify-content: start;
+
+    left: 2.4%;
+    top: 5.5%;
+  }
+
+  .whatsapp-logo {
+    width: 29.335%;
+  }
+}
+
 /* ------- slots part* -------*/
 
 .slot-window {
@@ -82,11 +193,9 @@ a {
 
 .slots-wrap {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 .column {
-  border: 1px solid blue;
-
   overflow: hidden;
   position: relative;
 }
@@ -147,6 +256,31 @@ a {
 }
 
 @media screen and (max-width: 480px) {
+  .slot-window {
+    top: 13.5%;
+    left: 50%;
+    transform: translate(-50%);
+
+    padding: 3.59% 2.43%;
+
+    width: 100%;
+    aspect-ratio: 453.399/307.812;
+  }
+
+  .column {
+    width: 30.359vw;
+    aspect-ratio: 118.4/280;
+  }
+  .slot-item {
+    width: 30.359vw;
+    aspect-ratio: 118.4/87.52;
+    margin-bottom: 7.4%;
+  }
+
+  .spin-btn {
+    font-size: 0.6533em;
+    padding: 0.248em 2.85188em 0.09948em 2.85188em;
+  }
 }
 @media screen and (min-width: 481px) {
   .slot-window {
@@ -157,11 +291,11 @@ a {
 
     width: 45.417%; /*872px*/
     aspect-ratio: 1.235;
-    border: 5px solid red;
+    /* border: 5px solid red; */
   }
   .column {
     width: 100%; /*230px*/
-    aspect-ratio: 230/538.72;
+    aspect-ratio: 230.5/536.72;
     /* height: 1000%; */
     /*538.72px*/
   }
@@ -170,7 +304,7 @@ a {
     /* height: 168.323px; */
     aspect-ratio: 227.731/168.323;
 
-    margin-bottom: 7.54%; /*17.3px*/
+    margin-bottom: 7.55%; /*17.3px*/
   }
 
   .spin-btn {
